{
    "name": "XRInputActions",
    "maps": [
        {
            "name": "XRControllerLeft",
            "id": "1845880b-d8cb-43a4-b423-8bcf0fa151a9",
            "actions": [
                {
                    "name": "Grip",
                    "type": "Value",
                    "id": "7d155261-99aa-454f-87bb-638957af4a69",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "02bee57e-1a86-4be5-98d6-6fe3a723aff4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "7b90c2d6-7d51-4101-83bd-977644a81be4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "e4271f5e-8dbc-4683-9329-b9acda76657b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger",
                    "type": "Value",
                    "id": "d9d96fda-7e43-4dc2-899b-e0388993d463",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "b229add7-151a-4c68-83e9-d96c86284a03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickAxis",
                    "type": "Value",
                    "id": "0ceaa9c0-3e05-442b-bcad-bf77ffc8f62a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackpadAxis",
                    "type": "Value",
                    "id": "5db0d854-8b1e-4e5e-ab8c-94cfb5703a54",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThumbstickPressed",
                    "type": "Button",
                    "id": "05c82ffc-ab13-4428-b506-6801b2b36dc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TrackpadPressed",
                    "type": "Button",
                    "id": "d7faa8b1-e409-404e-ab88-26e051934266",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "852ea393-23e7-4295-820d-693f9e239949",
                    "path": "<XRController>{LeftHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5094a28c-5290-41fb-92a0-40f494fbb66f",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7cf8f441-b3af-4bf9-a459-0dc8e15020eb",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4edf3b3-d19b-4f2a-b37e-e44715154b5f",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca8b9e0f-7272-4d18-9251-71087fd0c6e3",
                    "path": "<XRController>{LeftHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd54510d-bf4f-4d65-8c94-681d31b43dd6",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65d1d3bb-7eee-446e-8ff5-4a9d63e2a5fd",
                    "path": "<XRController>{LeftHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b876e025-0dde-4d42-9311-0f3941bc6959",
                    "path": "<XRController>{LeftHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackpadAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6409e164-2388-419c-97dd-0fce2bfa7531",
                    "path": "<XRController>/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da9462cf-e9b3-4524-8473-25546a1a5bae",
                    "path": "<XRController>{LeftHand}/trackpadPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackpadPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "XRControllerRight",
            "id": "301fff59-e40e-4f3e-bcd2-b22364bee7b3",
            "actions": [
                {
                    "name": "Grip",
                    "type": "Value",
                    "id": "24936600-fd21-49f0-aa00-0f3000612c98",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "GripPressed",
                    "type": "Button",
                    "id": "0de5b1b2-5760-42d7-8294-c83daa1747a4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryAction",
                    "type": "Button",
                    "id": "57ca0fa6-6ac9-4e8d-8b83-1aacb1baa3ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAction",
                    "type": "Button",
                    "id": "f241dbac-cf46-4fae-b3be-0246694e8980",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Trigger",
                    "type": "Value",
                    "id": "a56fbe5a-a613-4739-a7de-959552a265ea",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TriggerPressed",
                    "type": "Button",
                    "id": "1fb99bb3-cead-4e64-8ef2-07a676d970b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickAxis",
                    "type": "Value",
                    "id": "4842b991-3db1-4f6c-a782-884162fd5f6c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackpadAxis",
                    "type": "Value",
                    "id": "472057a6-6bc7-44d1-a7d4-c949407346c9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TrackpadPressed",
                    "type": "Button",
                    "id": "c54df489-96b2-40f6-8347-1829c57a3773",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ThumbstickPressed",
                    "type": "Button",
                    "id": "610ec8b7-458f-4c82-8a7e-1786c0a868ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e9e4c509-28fe-4887-a6d7-5f0bdfab3407",
                    "path": "<XRController>{RightHand}/grip",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8474352-610a-40b3-a73c-5a65c3781d51",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f87d947-4782-4bd7-baa2-3b31b2c827f2",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd7b8ce1-10fa-470f-85c5-a4f43e1936e5",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8453af64-844e-4457-9966-5d668dc123f8",
                    "path": "<XRController>{RightHand}/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f72a67a-9f44-4133-90ac-46ca3bb4621b",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee4cad0b-8a49-48aa-a05b-0b5a7ca01e3a",
                    "path": "<XRController>{RightHand}/joystick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cebb1303-b038-4477-92d7-cfa4cb27f4e5",
                    "path": "<XRController>{RightHand}/trackpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackpadAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "980370d9-9536-4fe0-a80f-ec4dfce84bc2",
                    "path": "<XRController>{RightHand}/trackpadPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TrackpadPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef1af6d9-f7e9-45a2-94b9-26ad088491aa",
                    "path": "<XRController>/thumbstickClicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPressed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}